[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunnelgraf"
version = "1.0.0"
dependencies = [
  "click>=8.0.6",
  "sshtunnel~=0.4.0",
  "pyyaml~=6.0.0",
  "python-hosts~=1.0.5",
  "pydantic~=2.10.0",
  "paramiko~=3.4.0",
  "deepmerge~=1.0",
  "wcwidth~=0.2.13",
  "psutil~=6.0.0",
]
authors = [
  {name = "Dennis Walker", email = "denniswalker@me.com"},
]
maintainers = [
  {name = "Dennis Walker", email = "denniswalker@me.com"}
]
description = "Hierarchical SSH tunnel management made easy. Securely define and share multihop connection profiles that expose a graph of remote endpoints as localhost."
license = { file = "LICENSE" }
keywords = ["ssh", "tunnel", "hosts", "connectivity", "secrets", "dns", "remote"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
tunnelgraf = "tunnelgraf:cli"

[project.urls]
Homepage = "https://github.com/denniswalker/tunnelgraf"
Documentation = "https://github.com/denniswalker/tunnelgraf/blob/main/README.md"
Repository = "https://github.com/denniswalker/tunnelgraf"
Issues = "https://github.com/denniswalker/tunnelgraf/issues"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ipdb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tunnelgraf"]

[tool.hatch.envs.test.scripts]
run = "pytest {args}"

[tool.hatch.envs.style]
detached = true
dependencies = [
  "flake8",
  "black",
  "isort",
]

[tool.hatch.envs.style.scripts]
check = [
  "flake8 .",
  "black --check --diff .",
  "isort --check-only --diff .",
]
fmt = [
  "isort .",
  "black .",
  "check",
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
executionEnvironments = [
  { root = "src/tunnelgraf" },
  { root = "src/tests" },
  { root = "src" }
]
stubPath = "stubs"

# Add this section to handle the src layout
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # ... other test dependencies ...
]
